[tool.poetry]
name = "allowed-videos"
version = "0.1.0"
description = ""
authors = ["Noam Yorav-Raphael"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.58.0"
isodate = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
